# wafer-vision-dmi-yield

./: .gitignore  BUILD_REPORT.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  MODEL_CARD.md  Makefile  README.md  README_WEEK2_BACKEND.md  pyproject.toml  requirements.txt
backend/configs/: train.yaml
backend/docs/: API_CONTRACT.md
backend/samples/: synthetic_edge_ring.csv  synthetic_edge_ring.npy  synthetic_scratch.csv  synthetic_scratch.npy
backend/scripts/: api_smoke_test.py  create_demo_checkpoint.py  create_demo_svm_bundle.py  create_sample_inputs.py  visualize_samples.py
backend/src/wafer_vision/: __init__.py  data.py  evaluate.py  features.py  model.py  predict.py  simulator.py  train.py  train_svm.py
backend/src/wafer_vision_api/: __init__.py  app.py  database.py  db_models.py  dependencies.py  input_loader.py  middleware.py  redis_client.py  schemas.py  settings.py
backend/src/wafer_vision_api/jobs/: backends.py  celery_app.py  store.py  temporal_workflows.py
backend/src/wafer_vision_api/routes/: features.py  health.py  history.py  predict.py  simulator.py
backend/src/wafer_vision_api/services/: history_service.py  model_service.py
backend/src/wafer_vision_api/workers/: rq_worker.py  simulator_tasks.py  temporal_worker.py
backend/tests/: conftest.py  test_api.py  test_enterprise_hardening.py  test_features.py  test_input_loader.py  test_jobs_v09.py  test_model_batch.py  test_preprocess.py  test_simulation_run_logging.py  test_simulator.py  test_simulator_v08_batching.py  test_v09_jobs.py
docs/: RUNBOOK.md  (+8 more)
(+30 files in other folders)
