[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wafervision"
version = "0.9.0"
description = "WaferVision CNN/SVM wafer defect classification backend with enterprise wafer-map simulation analytics with Postgres and Redis-backed worker orchestration"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
